# aoc-2021

./: Cargo.toml  README.md
common/: lib.rs
days/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs
