[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "common/lib.rs"

[dependencies]
itertools = "0.10"

[[bin]]
name = "01"
path = "days/01.rs"

[[bin]]
name = "02"
path = "days/02.rs"

[[bin]]
name = "03"
path = "days/03.rs"

[[bin]]
name = "04"
path = "days/04.rs"

[[bin]]
name = "05"
path = "days/05.rs"

[[bin]]
name = "06"
path = "days/06.rs"

[[bin]]
name = "07"
path = "days/07.rs"

[[bin]]
name = "08"
path = "days/08.rs"

[[bin]]
name = "09"
path = "days/09.rs"

[[bin]]
name = "10"
path = "days/10.rs"

[[bin]]
name = "11"
path = "days/11.rs"

[[bin]]
name = "12"
path = "days/12.rs"

[[bin]]
name = "13"
path = "days/13.rs"

[[bin]]
name = "14"
path = "days/14.rs"

[[bin]]
name = "15"
path = "days/15.rs"

[[bin]]
name = "16"
path = "days/16.rs"

[[bin]]
name = "17"
path = "days/17.rs"

[[bin]]
name = "18"
path = "days/18.rs"

[[bin]]
name = "19"
path = "days/19.rs"

[[bin]]
name = "20"
path = "days/20.rs"

[[bin]]
name = "21"
path = "days/21.rs"

[[bin]]
name = "22"
path = "days/22.rs"

[[bin]]
name = "23"
path = "days/23.rs"

[[bin]]
name = "24"
path = "days/24.rs"

[[bin]]
name = "25"
path = "days/25.rs"

